--- a/src/index.css
+++ b/src/index.css
@@ -6,7 +6,7 @@
   font-family: "Ubuntu", sans-serif;
   line-height: 1.5;
   font-weight: 400;
-  color-scheme: light dark;
+  /* color-scheme: light dark; */
   font-synthesis: none;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
@@ -26,19 +26,20 @@
 }
 
 body {
-  margin: 0;
+  /* margin: 0;
   display: flex;
   justify-content: center;
   min-height: 100vh;
+  background-color: var(--Blue-100); */
 }
-#root {
+/* #root {
   width: 100%;
   margin: 0;
   min-height: 100vh;
   display: flex;
   justify-content: center;
   align-items: center;
-}
+} */
 
 input {
   color: var(--color-Blue-950);
